--- a/src/app/Features/user-profile/user-profile.component.html
+++ b/src/app/Features/user-profile/user-profile.component.html
@@ -1,1 +1,26 @@
-<p>user-profile works!</p>
+
+
+
+@if(userData){
+    <div  class=" container my-5 ">
+        <div  (click)="back()" class="back-img m-5">
+            <img class="w-100 h-100" src="../../../assets/imgs/back.svg" alt="">
+        </div>
+        <div class="row row-card-body m-2 align-items-center justify-content-center ">
+    
+            <div class="col-4 profile-image">
+                <img [src]="userData.avatar" class=" rounded  w-100 h-100" >
+    
+            </div>
+    
+            <div class="col-4   px-5">
+                <h5 class="row-card-title">#{{userData.id}}</h5>
+                <h5 class="row-card-title">{{userData.first_name}} {{ userData.last_name }}</h5>
+                <p class="row-card-text">{{ userData.email }}</p>
+           
+              
+             
+            </div>
+        </div>
+    </div>
+}
