--- a/src/styles.scss
+++ b/src/styles.scss
@@ -103,7 +103,9 @@ body {
         cursor: pointer;
     }
 }
-.product-card {
+
+
+.card-cont {
     border-radius: 0.5em;
     box-shadow: 0px 0px 30px -3px rgba(0, 0, 0, 0.1), 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
     cursor: pointer;
@@ -117,27 +119,21 @@ body {
         width: 100%;
         height: 50%;
     }
-    .product-body{
-        .product-title
+    .card-body{
+        .card-title
         {
             font-size: 1.6rem;
             font-weight: 700;
            color: var(--basicColor);
             
         }
-        .product-price
+        .card-text
         {
             font-size: 1.2rem;
             font-weight: 500;
             color: rgb(50, 43, 3);
         }
-        .product-availability
-        {
-            font-size: 1.2rem;
-            font-weight: 500;
-          
-            
-        }
+  
 
     }
 }
